final final of final

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                   <div class="reseau text-center">
                   <a href="https://www.instagram.com/jeyh_m/" target="_blank"><i class="fa fa-instagram fa-2x text-danger me-4" aria-hidden="true"></i></a>
                   <a href="https://www.linkedin.com/in/jeremy-bosqui-a0457b196/" target="_blank"><i class=" me-4 fa fa-linkedin fa-2x text-primary" aria-hidden="true"></i></a>
-                  <a href="https://github.com/jeremybosqui" target="_blank" ><i class=" me-4 fa fa-github bg-light fa-2x text-dark" aria-hidden="true"></i></a>
+                  <a href="https://github.com/jeremybosqui" target="_blank" ><i class="me-4 fa fa-github fa-2x text-light" aria-hidden="true"></i></a>
                   <a href="https://twitter.com/JeremyBosqui" target="_blank"><i class="fa fa-twitter fa-2x text-info" aria-hidden="true"></i></a>
                   </div>
                   <hr class="hr my-4 m-5 bg-light">
@@ -103,7 +103,7 @@
                   <div class="row m-0 rounded alert-secondary mb-2 mt-2">
                     <p class="text-center text-decoration-underline fw-bold fs-5 text-dark">Langues</p>
                     <div class="col-5 col">
-                      <img src="asset/img/1024px-Flag_of_the_United_Kingdom_(2-3).svg.png" class="mx-auto d-block" width="50px" alt="drapeau_anglais">
+                      <img src="asset/img/1024px-Flag_of_the_United_Kingdom_(2-3).svg.png" class="mx-auto d-block" width="75px" alt="drapeau_anglais">
                       <div class="text-center text-dark">Anglais</div>
                       <div class="progress">
                         <div class="progress-bar bg-success" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
@@ -226,34 +226,33 @@
                 </div> <!--fin du bloc des compétences-->
                 <div class="tab-pane fade" id="expprof"> <!--début du bloc des expériences professionnelles-->
                   <div class="rounded alert-secondary m-0 mt-2">
-                    <h3 class="text text-dark fs-5 ">Sous-chef btm pâtisserie [Bayart]</h3>
+                    <h3 class="text text-dark fs-5">Sous-chef btm pâtisserie [Bayart] <img class="img-fluid" src="asset/img/croissantbayart.jpg" style="width: 140px;" alt=""></h3>
                     <p class="fst-italic text-dark">07/2017 à 07/2019</p>
-                    <p class="text-dark">Apprenti sous chef , responsable des apprentis, chargé de la production des entremets, gestion des
-                      stocks</p>
+                    <p class="text-dark">Apprenti sous chef , responsable des apprentis, chargé de la production des entremets, gestion des stocks</p>
                   </div>
                   <div class="rounded  alert-secondary m-0">
-                    <h3 class="text text-dark fs-5">Vendeur [Géant Batlière]</h3>
+                    <h3 class="text text-dark fs-5">Vendeur [Géant Batlière] <img class="img-fluid" src="asset/img/lgoogeantcasino.jpg" style="width: 100px;" alt="logo_casino"></h3>
                     <p class="fst-italic text-dark">07/2017 à 09/2018</p>
                     <p class="text-dark">Vente des produits locaux pâtisserie - boulangerie, jus locaux, fruits et légumes pendant
                       les mois du marché péyi .</p>
                   </div>
                   <div class="rounded  alert-secondary m-0">
-                    <h3 class="text fs-5 text-dark">Pâtissier [Géant Batelière]</h3>
+                    <h3 class="text fs-5 text-dark">Pâtissier [Géant Batelière]<img class="img-fluid" src="asset/img/lgoogeantcasino.jpg" style="width: 100px;" alt="logo_casino"></h3>
                     <p class="fst-italic text-dark">12/2016 à 01/2017</p>
                     <p class="text-dark">Confection d'entremets de pâtisserie rafiné responsable des stocks et de l'inventaire</p>
                   </div>
                   <div class="rounded alert-secondary m-0">
-                    <h3 class="text fs-5 text-dark">Apprenti pâtissier [Géant Batelière]</h3>
+                    <h3 class="text fs-5 text-dark">Apprenti pâtissier [Géant Batelière]<img class="img-fluid" src="asset/img/lgoogeantcasino.jpg" style="width: 100px;" alt="logo_casino"></h3>
                     <p class="fst-italic text-dark">11/2013 à 11/2016</p>
                     <p class="text-dark">Apprenti et gestionnaire des stocks</p>
                   </div>
                 </div>
                 <div class="tab-pane fade" id="formations"> <!--début du bloc des formations -->
-                  <p class="rounded alert-secondary m-0 mb-2 mt-2 text-dark">BAC+2 (BTS, DUT OU ÉQUIVALENTS) - BREVET DE MAÎTRISE PÂTISSIER
-                    CHOCOLATIER GLACIER TRAITEUR CONFISEUR [2019]</p>
-                  <p class="rounded border-2 alert-secondary m-0 mb-2 text-dark">MENTION CMPT - PÂTISSERIE CFA RIVIÈRE SALÉE [2016]</p>
-                  <p class="rounded border-2 alert-secondary m-0 mb-2 text-dark">CAP - PÂTISSERIE CFA RIVIÈRE SALÉE [2015]</p>
-                  <p class="rounded border-2 alert-secondary m-0 text-dark">BAC STI2D LYCÉE JOSEPH - GAILLARD[2013] </p>
+                  <p class="rounded alert-secondary m-0 mb-2 mt-2 text-dark">img BAC+2 (BTS, DUT OU ÉQUIVALENTS) - BREVET DE MAÎTRISE PÂTISSIER
+                    CHOCOLATIER GLACIER TRAITEUR CONFISEUR CFA DE COMPIEGNE [2019] <a href="https://www.cma-hautsdefrance.fr/" target="_blank"><img class="img-fluid" src="asset/img/logocompiegne.png" alt="logo_cfa_compiegne"></a></p>
+                  <p class="rounded border-2 alert-secondary m-0 mb-2 text-dark">MENTION CMPT - PÂTISSERIE CFA DE RIVIÈRE SALÉE [2016] <a href="https://www.cma-martinique.com/" target="_blank"><img class="img-fluid" src="asset/img/logosalee.jpg" style="width: 150px;" alt="cfa_riviere_salee"></a></p>
+                  <p class="rounded border-2 alert-secondary m-0 mb-2 text-dark">CAP - PÂTISSERIE CFA DE RIVIÈRE SALÉE [2015] <a href="https://www.cma-martinique.com/" target="_blank"><img class="img-fluid" src="asset/img/logosalee.jpg" style="width: 150px;" alt="cfa_riviere_salee"></a></p>
+                  <p class="rounded border-2 alert-secondary m-0 text-dark"> BAC STI2D LYCÉE GÉNÉRAL / TECHONOLOGIQUE JOSEPH - GAILLARD[2013] <a href="https://www.josephgaillardweb.fr/" target="_blank"><img class="img-fluid" src="asset/img/logojosepghgaillard.webp" style="width: 100px;" alt="lycee_joseph"></a></p>
                 </div>
                 <div class="tab-pane fade" id="centre">
                   <p class="rounded alert-secondary m-0 mb-2 mt-2 text-dark"><i class="fa fa-book fa-sm-lg fa-2x m-2 "></i>Lecture mangas/livres</p>
@@ -284,6 +283,7 @@
             </div>
             <div class="card-body">
               <div class="card-title text-light">Croisière luxieuse</div>
+              <hr class="bg-light">
               <p class="text-light">Site de croisière réalisé lors d'un projet de groupe après 3 semaines de formation.</p>
               <a href="https://jeremybosqui.github.io/" class="rounded-pill text-decoration-none btn-secondary btn-lg" target="_blank">Click</a>
             </div>
@@ -296,6 +296,7 @@
             </div>
             <div class="card-body">
               <div class="card-title text-light">Site de voyage</div>
+              <hr class="bg-light">
               <p class="text-light">Site de voyage réalisé après 2 semaines de formation avec quelques contraintes imposé.</p>
               <a href="https://jeremybosqui.github.io/jeremybosqui2.github.io/" class="rounded-pill text-decoration-none btn-secondary btn-lg" target="_blank">Click</a>
             </div>
@@ -308,6 +309,7 @@
             </div>
             <div class="card-body">
               <div class="card-title text-light">Le meilleur site</div>
+                <hr class="bg-light">
               <p class="text-light">Soyez surpris , je vous laisse juger de ma créativité par vos propre yeux.</p>
               <a href="asset/img/Untitled (2).jpg" class="rounded-pill text-decoration-none btn-secondary btn-lg" target="_blank">Click</a>
             </div>
