--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                   </p>
               </div>
                 <div class=""> <!--bouton pour télécharger mon CV-->
-                  <a href="asset/jeremy_cv_a_jour_1 (1) (1).pdf" target="_blank"><button
+                  <a href="NEW CV PDF.pdf" target="_blank"><button
                       class="rounded-pill btn-outline-danger w-100 btn-mb ">Télécharger mon C.V</button></a>
                 </div>
               </div>
