--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
   <div class="container-fluid"> <!--début de container qui englobe toute la partie de la card avec la barre de navigation et ses composants-->
     <div class="row">
-      <div class="col-6">
-        <div class="card mb-3 mt-2 bg-dark" style="max-width: 740px;">
+      <div class="col-sm-12 col-lg-6">
+        <div class="card mb-3 mt-2" style="max-width: 740px; background: linear-gradient(rgba(14, 13, 13, 0.836), rgba(14, 13, 13, 0.774)) rgb(211, 204, 204);;">
           <div class="row g-0">
             <div class="col-md-4">
               <img src="asset/img/Sans_titre__3_-removebg-preview.png" class="img-fluid" alt="photo_avatar">
@@ -23,12 +23,12 @@
                 <div class="car-head text-light text-center"><h1>Web designer</h1></div>
                 <hr class="bg-light" >
                 <h2 class="card-title text-light">Jérémy Bosqui</h2>
-                <p class="card-text text-light">Diplômé d'un BTS en pâtisserie , arès 8 ans dans ce beau métier je me suis tourné récemment vers un domaine qui m'a
+                <p class="card-text text-light">Diplômé d'un BTS en pâtisserie , après 8 ans dans ce beau métier je me suis tourné récemment vers un domaine qui m'a
                 toujours plus à savoir le Web Design. Âgé de 26 ans et ayant acquis beaucoup de compétences grâce à mes expériences passé je
-                m'adapte parfaitement au nouveau défi que je me suis lancé devenir un Web designer qualifié.</p>
-                <p class="card-text"><div class="text-muted fs-5">Un homme passionné par son futur métier</div></p>
+                m'adaptes parfaitement à ce nouveau défi.</p>
+                <p class="card-text"><div class="text-muted fs-4">Un homme passionné par son futur métier</div></p>
                 <div class="list text-light">
-                  <p class="list"><i class="fa fa-mobile fa-lg" aria-hidden="true"></i>(+33)0641427982</p>
+                  <p class="list"><i class="fa fa-mobile fa-lg" aria-hidden="true"></i> (+33)0641427982</p>
                   <hr>
                   <p class="list"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i><a href="mailto:bosdani97@gmail.com" target="_blank" class="text-light ms-1">bosdani97@gmail.com</a></p>
                   <hr>
@@ -44,10 +44,10 @@
           </div>
         </div>
       </div>
-      <div class="col-6">
-        <nav class="nav-pills d-sm-block d-md-flex mt-1">
+      <div class="col-lg-6 col-sm-md-12">
+        <nav class="nav-pills nav nabard-sm-block d-md-flex mt-1">
           <div class="container-fluid"> <!--ceci est la navbar avec un nav-pills pour avoir le hover bleu quand on click sur un des boutons pour savoir où on se trouve quand on navigue-->
-            <ul class="bg-dark nav d-sm-block d-md-flex mt-1 rounded">
+            <ul class="nav d-sm-block d-md-flex mt-1 rounded" style="background: linear-gradient(rgba(14, 13, 13, 0.836), rgba(14, 13, 13, 0.774)) rgb(211, 204, 204);;">
               <li class="nav-item">
                 <a class="nav-link text-light fw-bold" data-bs-toggle="tab" href="#home"><i class="fa fa-home fa-lg"></i></a>
               </li>
@@ -66,7 +66,7 @@
             </ul>
               <div id="myTabContent" class="tab-content"> <!--contient tous les elements placé dans la barre de navigation-->
                 <div class="tab-pane fade-out active show" id="home"> <!-- début du contenu du bouton home avec les liens vers les differents reseaux sociaux et avec le slider qui contient mes dessins pour montrer ma creativite-->
-                  <p class="fs-5 mt-2 text-center text-light">Bienvenu sur un CV numérique minimaliste et bien travaillé.</p>
+                  <p class="fs-5 mt-2 text-center text-light">Bienvenu sur mon CV numérique ceci est la V-1.</p>
                   <div class="reseau text-center">
                   <a href="https://www.instagram.com/jeyh_m/" target="_blank"><i class="fa fa-instagram fa-2x text-danger me-4" aria-hidden="true"></i></a>
                   <a href="https://www.linkedin.com/in/jeremy-bosqui-a0457b196/" target="_blank"><i class=" me-4 fa fa-linkedin fa-2x text-primary" aria-hidden="true"></i></a>
@@ -120,7 +120,7 @@
                   </div>
                 
                   <div class="row m-0 rounded alert-secondary mb-2 mt-2">
-                    <p class="text-center text-decoration-underline fs-5 fw-bold text-dark">Langages et Framework</p>
+                    <p class="text-center text-decoration-underline fs-5 fw-bold text-dark">Languages et Framework</p>
                     <div class="col-5 col">
                       <img src="asset/img/htmlseul.png" class="mx-auto d-block" width="56px" alt="drapeau_anglais">
                       <div class="text-center text-dark">HTML</div>
@@ -148,14 +148,14 @@
                     <div class="col" ></div>
                     <div class="col-6 col">
                       <img src="asset/img/javascri-removebg-preview.png" class="mx-auto d-block" width="52px" alt="drapeau_anglais">
-                      <div class="text-center text-dark">Java-script</div>
+                      <div class="text-center text-dark">JavaScript</div>
                       <div class="progress">
                         <div class="progress-bar " role="progressbar" style="width: 5%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
                     </div>
                   </div>
                   <div class="row m-0 rounded alert-secondary mb-2 mt-2"> <!--début des logiciels maitrisé partiellement ou en totalité avec la barre à niveau-->
-                    <p class="text-center text-decoration-underline fs-5 fw-bold text-dark">other skills</p>
+                    <p class="text-center text-decoration-underline fs-5 fw-bold text-dark">Ither skills</p>
                     <div class="col-5 col">
                       <img src="asset/img/Trello-Logo.png" class="mx-auto d-block mt-5" width="91px" alt="image_trello">
                       <div class="text-center text-dark">Trello</div>
@@ -228,18 +228,18 @@
                   <div class="rounded alert-secondary m-0 mt-2">
                     <h3 class="text text-dark fs-5">Sous-chef btm pâtisserie [Bayart] <img class="img-fluid" src="asset/img/croissantbayart.jpg" style="width: 140px;" alt=""></h3>
                     <p class="fst-italic text-dark">07/2017 à 07/2019</p>
-                    <p class="text-dark">Apprenti sous chef , responsable des apprentis, chargé de la production des entremets, gestion des stocks</p>
+                    <p class="text-dark">Apprenti sous-chef , responsable des apprentis, chargé de la production des entremets, gestion des stocks</p>
                   </div>
                   <div class="rounded  alert-secondary m-0">
                     <h3 class="text text-dark fs-5">Vendeur [Géant Batlière] <img class="img-fluid" src="asset/img/lgoogeantcasino.jpg" style="width: 100px;" alt="logo_casino"></h3>
                     <p class="fst-italic text-dark">07/2017 à 09/2018</p>
-                    <p class="text-dark">Vente des produits locaux pâtisserie - boulangerie, jus locaux, fruits et légumes pendant
+                    <p class="text-dark">Vente des produits locaux pâtisseries - boulangerie, jus locaux, fruits et légumes pendant
                       les mois du marché péyi .</p>
                   </div>
                   <div class="rounded  alert-secondary m-0">
                     <h3 class="text fs-5 text-dark">Pâtissier [Géant Batelière]<img class="img-fluid" src="asset/img/lgoogeantcasino.jpg" style="width: 100px;" alt="logo_casino"></h3>
                     <p class="fst-italic text-dark">12/2016 à 01/2017</p>
-                    <p class="text-dark">Confection d'entremets de pâtisserie rafiné responsable des stocks et de l'inventaire</p>
+                    <p class="text-dark">Confection d'entremets de pâtisserie raffiné responsable des stocks et de l'inventaire</p>
                   </div>
                   <div class="rounded alert-secondary m-0">
                     <h3 class="text fs-5 text-dark">Apprenti pâtissier [Géant Batelière]<img class="img-fluid" src="asset/img/lgoogeantcasino.jpg" style="width: 100px;" alt="logo_casino"></h3>
@@ -248,7 +248,7 @@
                   </div>
                 </div>
                 <div class="tab-pane fade" id="formations"> <!--début du bloc des formations -->
-                  <p class="rounded alert-secondary m-0 mb-2 mt-2 text-dark">img BAC+2 (BTS, DUT OU ÉQUIVALENTS) - BREVET DE MAÎTRISE PÂTISSIER
+                  <p class="rounded alert-secondary m-0 mb-2 mt-2 text-dark">BAC+2 (BTS, DUT OU ÉQUIVALENTS) - BREVET DE MAÎTRISE PÂTISSIER
                     CHOCOLATIER GLACIER TRAITEUR CONFISEUR CFA DE COMPIEGNE [2019] <a href="https://www.cma-hautsdefrance.fr/" target="_blank"><img class="img-fluid" src="asset/img/logocompiegne.png" alt="logo_cfa_compiegne"></a></p>
                   <p class="rounded border-2 alert-secondary m-0 mb-2 text-dark">MENTION CMPT - PÂTISSERIE CFA DE RIVIÈRE SALÉE [2016] <a href="https://www.cma-martinique.com/" target="_blank"><img class="img-fluid" src="asset/img/logosalee.jpg" style="width: 150px;" alt="cfa_riviere_salee"></a></p>
                   <p class="rounded border-2 alert-secondary m-0 mb-2 text-dark">CAP - PÂTISSERIE CFA DE RIVIÈRE SALÉE [2015] <a href="https://www.cma-martinique.com/" target="_blank"><img class="img-fluid" src="asset/img/logosalee.jpg" style="width: 150px;" alt="cfa_riviere_salee"></a></p>
@@ -285,7 +285,7 @@
               <div class="card-title text-light">Croisière luxieuse</div>
               <hr class="bg-light">
               <p class="text-light">Site de croisière réalisé lors d'un projet de groupe après 3 semaines de formation.</p>
-              <a href="https://jeremybosqui.github.io/" class="rounded-pill text-decoration-none btn-secondary btn-lg" target="_blank">Click</a>
+              <a href="https://jeremybosqui.github.io/" class="text-decoration-none btn-secondary btn-lg" target="_blank">Click</a>
             </div>
           </div>
         </div>
@@ -298,20 +298,20 @@
               <div class="card-title text-light">Site de voyage</div>
               <hr class="bg-light">
               <p class="text-light">Site de voyage réalisé après 2 semaines de formation avec quelques contraintes imposé.</p>
-              <a href="https://jeremybosqui.github.io/jeremybosqui2.github.io/" class="rounded-pill text-decoration-none btn-secondary btn-lg" target="_blank">Click</a>
+              <a href="https://jeremybosqui.github.io/jeremybosqui2.github.io/" class="text-decoration-none btn-secondary btn-lg" target="_blank">Click</a>
             </div>
           </div>
         </div>
         <div class="col-lg-4 col-sm-6 mb-4">
           <div class="card" style="background: linear-gradient(rgba(29, 29, 29, 0.918), rgba(0, 0, 0, 0.603)) rgb(211, 204, 204);;">
             <div class="">
-              <img src="asset/img/Untitled (3).jpg" class="img-fluid" alt="image_faite_par_moi">
+              <img src="asset/img/Screenshot 2021-06-24 14.04.03 - Display 2.png" class="img-fluid" alt="image_faite_par_moi">
             </div>
             <div class="card-body">
-              <div class="card-title text-light">Le meilleur site</div>
+              <div class="card-title text-light mt-2">Site de vin</div>
                 <hr class="bg-light">
-              <p class="text-light">Soyez surpris , je vous laisse juger de ma créativité par vos propre yeux.</p>
-              <a href="asset/img/Untitled (2).jpg" class="rounded-pill text-decoration-none btn-secondary btn-lg" target="_blank">Click</a>
+              <p class="text-light">Voici le site de notre dernier projet de groupe, un site vitrine sur du vin bio. Avec un panier vitrine.</p>
+              <a href="https://pauline18-cmd.github.io/greenwine2.0/" class="text-decoration-none btn-secondary btn-lg" target="_blank">Click</a>
             </div>
           </div>
         </div>
@@ -328,16 +328,16 @@
                       <span><i class="fa fa-line-chart" aria-hidden="true"></i></span>
                   </div>
                   <h3 class="title fw-bold">Valeur ajouté</h3>
-                  <p class="description">Ayant acquis de l'expérience avec mes précédents boulots, je sais en toute modestie que je suis en capacité d'apporter de nouvelles idées et d'avoir un regard neuf qui sera bénéfique à l'entreprise.</p>
+                  <p class="description">Ayant acquis de l'expérience, je sais en toute modestie que je suis en capacité d'apporter de nouvelles idées / une nouvelle méthodologie de travail.</p>
               </div>
           </div>
-          <div class="col-md-4 col-sm-6">
+          <div class="col-md-4 col-sm-6 border-start border-end">
               <div class="serviceBox red">
                   <div class="service-icon">
                       <span><i class="fa fa-mobile" aria-hidden="true"></i></span>
                   </div>
                   <h3 class="title fw-bold">Responsive Design</h3>
-                  <p class="description">Dans le cadre de la formation front-end j'ai appris à rendre responsif aussi bien sur tablette que sur téléphone un site car bien que bootstrap soit par nature responsif une fois que l'on repasse sur de l'HTML/CSS il ne faut pas perdre ses repères .</p>
+                  <p class="description">Dans le cadre de la formation front-end j'ai appris à rendre responsif aussi bien sur tablette que sur téléphone un site.</p>
               </div>
           </div>
           <div class="col-md-4 col-sm-6">
@@ -354,18 +354,17 @@
   <div class="container text-center"> <!--début du 2eme container avec le reste de mes qualités-->
     <hr class="bg-light" >
     <div class="row">
-      <div class="" ></div>
         <div class="col-md-4 col-sm-6">
             <div class="serviceBox purple">
                 <div class="service-icon">
                     <span><i class="fa fa-briefcase" aria-hidden="true"></i></span>
                 </div>
                 <h3 class="title fw-bold">Travailleur</h3>
-                <p class="description">Après l'obtention de ma mention en pâtisserie je me suis orienté vers un BTM en pâtisserie (équivalent BTS) ce fût 2 années de dur labeur pour obtenir ce diplôme et je suis fier d'avoir travailler autant pour son obtention.</p>
+                <p class="description">Après l'obtention de mes différents diplômes j'ai continué à travailler dans différents secteur. Pour finalement me lancé dans l'aventure du Web Design.</p>
             </div>
         </div>
-        <div class="col-md-4 col-sm-6">
-            <div class="serviceBox ">
+        <div class="col-md-4 col-sm-6 border-start border-end">
+            <div class="serviceBox">
                 <div class="service-icon">
                     <span><i class="fas fa-user-graduate"></i></span>
                 </div>
@@ -379,7 +378,7 @@
                   <span><i class="fas fa-palette"></i></span>
               </div>
               <h3 class="title fw-bold">Créativité</h3>
-              <p class="description">Je dessine depuis que je suis jeune et malgré des périodes où j'ai peu touché à mes crayons je n'ai rien perdu de mon esprit créatif et je suis ravi de le mettre au service de ce métier passionnant qu'est le Web Design.</p>
+              <p class="description">Je dessine depuis que je suis jeune et malgré des périodes où j'ai peu touché à mes crayons je n'ai rien perdu de mon esprit créatif et je suis ravi de le mettre au service du Web Design.</p>
           </div>
       </div>
     </div> <!--fin de la div row qui englobe les qualités mise en avant-->
