--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             <div class="card-body">
               <div class="card-title text-light mt-2">Site de vin</div>
                 <hr class="bg-light">
-              <p class="text-light">Voici le site de notre dernier projet de groupe, un site vitrine sur du vin bio. Avec un panier vitrine.</p>
+              <p class="text-light">Voici le site de notre dernier projet de groupe, un site vitrine sur du vin bio.</p>
               <a href="https://pauline18-cmd.github.io/greenwine2.0/" class="text-decoration-none btn-secondary btn-lg" target="_blank">Click</a>
             </div>
           </div>
