--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     </div>
                   </div>
                   <div class="row m-0 rounded alert-secondary mb-2 mt-2"> <!--début des logiciels maitrisé partiellement ou en totalité avec la barre à niveau-->
-                    <p class="text-center text-decoration-underline fs-5 fw-bold text-dark">Ither skills</p>
+                    <p class="text-center text-decoration-underline fs-5 fw-bold text-dark">Other skills</p>
                     <div class="col-5 col">
                       <img src="asset/img/Trello-Logo.png" class="mx-auto d-block mt-5" width="91px" alt="image_trello">
                       <div class="text-center text-dark">Trello</div>
@@ -310,7 +310,7 @@
             <div class="card-body">
               <div class="card-title text-light mt-2">Site de vin</div>
                 <hr class="bg-light">
-              <p class="text-light">Voici le site de notre dernier projet de groupe, un site vitrine sur le vin bio.</p>
+              <p class="text-light">Voici le site web de notre dernier projet de groupe, un site vitrine sur le vin bio.</p>
               <a href="https://pauline18-cmd.github.io/greenwine2.0/" class="text-decoration-none btn-secondary btn-lg" target="_blank">Click</a>
             </div>
           </div>
