--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     <section class="text-center">
       <h2 class="mb-5 text-light fw-bold">Projets réalisés</h2>
       <div class="row">
-        <div class="col-lg-4 col-sm-12 mb-4">
+        <div class="col-lg-6 col-sm-12 mb-4">
           <div class="card" style="background: linear-gradient(rgba(29, 29, 29, 0.918), rgba(0, 0, 0, 0.603)) rgb(211, 204, 204);;">
             <div class="rien_inutile_merde">
               <img src="asset/img/Screenshot 2021-06-05 at 00.59.14.png" class="img-fluid" alt="image_screen_de_mon_site">
@@ -286,7 +286,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 mb-4">
+        <div class="col-lg-6 col-sm-6 mb-4">
           <div class="card" style="background: linear-gradient(rgba(29, 29, 29, 0.918), rgba(0, 0, 0, 0.603)) rgb(211, 204, 204);;">
             <div class="">
               <img src="asset/img/Screenshot 2021-06-05 at 02.02.42.png" class="img-fluid" alt="image_de_folie">
@@ -299,7 +299,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 mb-4">
+        <div class="col-lg-6 col-sm-6 mb-4">
           <div class="card" style="background: linear-gradient(rgba(29, 29, 29, 0.918), rgba(0, 0, 0, 0.603)) rgb(211, 204, 204);;">
             <div class="">
               <img src="asset/img/Screenshot 2021-06-24 14.04.03 - Display 2.png" class="img-fluid" alt="image_faite_par_moi">
@@ -309,6 +309,19 @@
                 <hr class="bg-light">
               <p class="text-light">Voici le site web de notre dernier projet de groupe, un site vitrine sur le vin bio.</p>
               <a href="https://pauline18-cmd.github.io/greenwine2.0/" class="text-decoration-none btn-secondary btn-lg" target="_blank">Click</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 col-sm-6 mb-4">
+          <div class="card" style="background: linear-gradient(rgba(29, 29, 29, 0.918), rgba(0, 0, 0, 0.603)) rgb(211, 204, 204);;">
+            <div class="">
+              <img src="asset/img/Screenshot 2021-08-12 22.58.26.png" class="img-fluid" alt="image_faite_par_moi">
+            </div>
+            <div class="card-body">
+              <div class="card-title text-light mt-1">Site de pâtisserie</div>
+                <hr class="bg-light">
+              <p class="text-light">Voilà le dernier projet effectué à la Manu, un projet individuel qui consistait à refaire un site Web en gardant la charte graphique.</p>
+              <a href="https://jeremybosqui.github.io/pastrywebsite/" class="text-decoration-none btn-secondary btn-lg" target="_blank">Click</a>
             </div>
           </div>
         </div>
